--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 
 							<!-- Logo -->
 								<a href="index.html" class="logo">
-									<span class="symbol"><img src="images/logo.svg" alt="" /></span><span class="title">strongpassword.io | Serverless Heroes</span>
+									<span class="symbol"><img src="images/serverlessheroes.png" alt="" /></span><span class="title">strongpassword.io | Serverless Heroes</span>
 								</a>
 
 							<!-- Nav -->
